--- a/src/css/searchbox.css
+++ b/src/css/searchbox.css
@@ -2,7 +2,7 @@
     padding-left: .5rem;
 }
 .searchbar {
-    border: 2px solid #077971;
+    border: 2px solid #985D59;
     border-radius: 30px;
     height: 38px;
     font-family: 'Nunito Sans', sans-serif;
@@ -16,7 +16,7 @@
     background-color: transparent;
     border-color: transparent;
     font-size: 18px;
-    color: #01A093;
+    color: #985D59;
     position: relative;
     right: 44px;
     top: 1px;
